Fix overflow-x

--- a/src/less/section-article.less
+++ b/src/less/section-article.less
@@ -101,3 +101,6 @@ article {
     transform: translate(0, 0) scale(1, 1);
     transition: all ease-out .6s .4s;
 }
+body {
+    overflow-x: hidden;
+}
